<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    android:fillViewport="true"
    tools:context=".ActivitySettings">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constrainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.area.ActivityRegisterAction">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_hint_mail"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_hint_password"
            app:layout_constraintTop_toBottomOf="@id/email_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_hint_username"
            app:layout_constraintTop_toBottomOf="@id/password_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_hint_firstname"
            app:layout_constraintTop_toBottomOf="@id/username_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_hint_lastname"
            app:layout_constraintTop_toBottomOf="@id/firstname_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/reddit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastname_text_input"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_reddit"/>

        <CheckBox
            android:id="@+id/gmail_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reddit_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_gmail"/>
        <CheckBox
            android:id="@+id/meteo_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gmail_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_meteo"/>

        <CheckBox
            android:id="@+id/spotify_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/meteo_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_spotify"/>

        <CheckBox
            android:id="@+id/timer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spotify_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_timer"/>

        <CheckBox
            android:id="@+id/twitch_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/timer_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_twitch"/>

        <CheckBox
            android:id="@+id/youtube_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/twitch_checkbox"
            app:layout_constraintLeft_toLeftOf="@id/constrainlayout"
            android:text="@string/area_button_youtube"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/area_button_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
